# eric-robotics-assignment

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  FSD Assignment #1.md  FSD_Assignment_1_Report.md  README.md  close-phone-access.bat  close-phone-access.ps1  docker-compose.yml  help.md  open-phone-access.bat  open-phone-access.ps1  run.bat  setup.ps1  setup.sh
docker/: entrypoint.sh  nginx-unified.conf  run-unified.sh
docs/: CONFIRMATION_EMAIL_TEMPLATE.md  DEPLOYMENT_GUIDE.md  EVALUATION_MAP.md  FSD_Assignment_1_Report.docx  REVIEWER_GUIDE.md  SCREENSHOT_CHECKLIST.md  SUBMISSION_CHECKLIST.md  TODAY_PLAN.md  dashboard-cleanup-responsiveness-plan.md  prep.md
docs/screenshots/: README.md
eric_sim/: package.xml  setup.cfg  setup.py
eric_sim/config/: pointcloud_to_laserscan.yaml  slam_toolbox.yaml
eric_sim/eric_sim/: __init__.py  camera_stream_node.py  diagnostics_node.py  robot_motor_node.py  velodyne_sim_node.py  world_model.py
eric_sim/launch/: eric_full_stack.launch.py
eric_sim/maps/: warehouse.yaml
insight-io-dashboard/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
insight-io-dashboard/nginx/: default.conf
insight-io-dashboard/public/assets/: mission-events.json  telemetry.json
insight-io-dashboard/src/: App.tsx  index.css  main.tsx  types.ts
insight-io-dashboard/src/components/: OccupancyMapPanel.tsx  PointCloudPanel.tsx
insight-io-dashboard/src/data/: assetManifest.ts  warehouseWorld.ts
insight-io-dashboard/src/ros/: index.ts  (+9 more)
insight-io-dashboard/tools/: rosbridge_lan_proxy.py
(+1 files in other folders)
